--- a/src/Css/TodoHeader.css
+++ b/src/Css/TodoHeader.css
@@ -5,11 +5,12 @@ left: 0px;
 width: 100%;
 height: 98px;
 /* UI Properties */
-background: var(--unnamed-color-000000) 0% 0% no-repeat padding-box;
+
 background: #000000 0% 0% no-repeat padding-box;
-opacity: 1;
+opacity: 0.5;
 display: flex;
 justify-content: space-between;
+z-index: 0;
 }
 .todoheadertxt {
     position: absolute;
@@ -18,7 +19,7 @@ left: 28px;
 width: 112px;
 height: 20px;
 /* UI Properties */
-color: var(--unnamed-color-ffffff);
+
 
 
 color: #FFFFFF;
@@ -46,8 +47,8 @@ opacity: 1;
 right: 2%;
 width: 68px;
 height: 68px;
-/* UI Properties */
-background: var(--unnamed-color-e6ebff) 0% 0% no-repeat padding-box;
-background: #E6EBFF 0% 0% no-repeat padding-box;
-opacity: 1;
+background-color: blue;
+
+
+
 }
