--- a/src/Css/Todo.css
+++ b/src/Css/Todo.css
@@ -29,3 +29,10 @@ cursor: pointer;
     border-radius: 4px;
     opacity: 1;
 }
+
+@media only screen and (max-width: 600px) {
+   .taskInput {
+    width: 50%;
+    height: 76px;
+   }
+  }
