--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Poppins', sans-serif; 
+}
 .App {
   text-align: center;
 }
@@ -7,11 +10,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -36,8 +34,4 @@
     transform: rotate(360deg);
   }
 }
-
-
-
-/* sign in */
 
