--- a/src/Css/SignIn.css
+++ b/src/Css/SignIn.css
@@ -52,14 +52,18 @@ border-radius: 50%;
 background: transparent url('../images/addPhoto.png') 0% 0% no-repeat padding-box;
 opacity: 1;
    }
+   .addAphoto{
+   
+    position:absolute;
+    left: 40%;
+    top: 30%;
+   }
    .nametxt {
     position: absolute;
-    top: 400px;
+    top: 50%;
 left: 38%;
-
 width: 164px;
 height: 31px;
-/* UI Properties */
 color: var(--unnamed-color-000000);
 text-align: left;
 font: normal normal 300 22px/33px Poppins;
@@ -70,7 +74,7 @@ opacity: 1;
    }
    .nameInput{
     position: absolute;
-    top: 70%;
+    top: 60%;
 left: 8%;
 width: 487px;
 height: 76px;
@@ -89,8 +93,19 @@ left: 30%;
 width: 258px;
 height: 66px;
 /* UI Properties */
-background: var(--unnamed-color-5efc8d) 0% 0% no-repeat padding-box;
-background: #5EFC8D 0% 0% no-repeat padding-box;
+
+border-radius: 4px;
+opacity: 1;
+   }
+   .signInbutton {
+    position: absolute;
+    background-color: #5EFC8D;
+    top: 85%;
+left: 30%;
+width: 258px;
+height: 66px;
+/* UI Properties */
+
 border-radius: 4px;
 opacity: 1;
    }
@@ -100,10 +115,13 @@ opacity: 1;
     color: #000;
     border: 0px;
     border-right: 1px solid #e5e5e5;
-    padding: 10px 15px;
+    padding: 0px ;
     margin-right: 20px;
     transition: .5s;
     display: hidden;
+    height: 50px;
+    position: absolute;
+    left: -5%;
   }
   
   input[type=file]::file-selector-button:hover {
@@ -111,51 +129,164 @@ opacity: 1;
     border: 0px;
     border-right: 1px solid #e5e5e5;
   }
+  .requiredtext{
+    color: red;
+    position: absolute;
+    top: 70%;
+    left: 7%;
+    font-size: 30px;
+  }
 
-   @media only screen and (max-width: 1200px) {
-   
+   @media only screen and (max-width: 600px) {
+   .SignIn{
+    position: relative;
+   }
     .form {
         position: absolute;
        top:120px;
        background-color: #FFFFFF;
     
-       width:500px;
-       height: 70vh;
-       left: 15%;
+       width:100%;
+       left: 0%;
       
        justify-content: center;
-      
-      /* UI Properties */
-      
+     
       border-radius: 4px;
       opacity: 1;
       }
+      .nametxt{
+        position: absolute;
+        top: 50%;
+    left: 28%;
+    
+    width: 164px;
+    height: 31px;
+      }
       .nameInput{
         position: absolute;
-        top: 500px;
-    left: 8%;
-    width: 417px;
+        top: 62%;
+    left: 5%;
+    width: 90%;
     height: 76px;
-    /* UI Properties */
-    background: var(--unnamed-color-e6ebff) 0% 0% no-repeat padding-box;
-    background: #E6EBFF 0% 0% no-repeat padding-box;
-    border-radius: 4px;
-    opacity: 1;
+  
     font-size: 30px;
        }
        .getStarted {
         position:absolute;
-         top: 40px;
-         left: 30%;
+         top: 0%;
+         left: 20%;
      width: 277px;
      height: 67px;
-     /* UI Properties */
-     color: var(--unnamed-color-000000);
-     text-align: left;
-     font: normal normal 600 48px/72px Poppins;
-     letter-spacing: 0px;
-     color: #000000;
-     text-transform: capitalize;
-     opacity: 1;
+  
+     
+        }
+        .addimage {
+          position: absolute;
+          top: 30%;
+          left: 33%
+        };
+        .signInbtn{
+          position: absolute;
+          background-color: #5EFC8D;
+          top: 70%;
+      left:7%;
+      width: 258px;
+      height: 66px;
+        }
+        .signInbutton {
+          position: absolute;
+          top: 85%;
+          left:16%;
+          width: 258px;
+        }
+       
+        .addAphoto{
+          position: absolute;
+          top: 20%;
+          left: 33%;
+        }
+        .requiredtext{
+          display: none;
+        }
+        input[type=file]::file-selector-button {
+          background-color: #fff;
+          color: #000;
+          border: 0px;
+          border-right: 1px solid #e5e5e5;
+          padding: 0px ;
+          margin-right: 20px;
+          transition: .5s;
+          display: hidden;
+          height: 50px;
+          position: absolute;
+          left: 15%;
         }
   }
+  @media only screen and (min-width: 650px) and (max-width:1500px) {
+    .SignIn{
+     position: relative;
+    }
+     .form {
+         position: absolute;
+        top:120px;
+        background-color: #FFFFFF;
+        width:100%;
+        left: 0%;
+        justify-content: center;
+       border-radius: 4px;
+       opacity: 1;
+       }
+       .nametxt{
+         position: absolute;
+         top: 50%;
+     left: 38%;
+     
+     width: 164px;
+     height: 31px;
+       }
+       .nameInput{
+         position: absolute;
+         top: 62%;
+     left: 5%;
+     width: 90%;
+     height: 76px;
+     /* UI Properties */
+    
+     opacity: 1;
+     font-size: 30px;
+        }
+        .getStarted {
+         position:absolute;
+          top: 0%;
+          left: 35%;
+      width: 277px;
+      height: 67px;
+      /* UI Properties */
+      color: var(--unnamed-color-000000);
+      text-align: left;
+      font: normal normal 600 48px/72px Poppins;
+      letter-spacing: 0px;
+      color: #000000;
+      text-transform: capitalize;
+      opacity: 1;
+         }
+         .addimage {
+           position: absolute;
+           top: 30%;
+           left: 42%
+         };
+         .signInbtn{
+           position: absolute;
+           background-color: #5EFC8D;
+           top: 70%;
+       left:7%;
+       width: 258px;
+       height: 66px;
+         }
+        
+         .addAphoto{
+           position: absolute;
+           top: 20%;
+           left: 42%;
+         }
+   }
