--- a/src/Css/TodoHeader.css
+++ b/src/Css/TodoHeader.css
@@ -5,9 +5,9 @@ left: 0px;
 width: 100%;
 height: 98px;
 /* UI Properties */
+background-color: #090909;
 
-background: #000000 0% 0% no-repeat padding-box;
-opacity: 0.5;
+opacity: 0.9;
 display: flex;
 justify-content: space-between;
 z-index: 0;
@@ -18,10 +18,6 @@ z-index: 0;
 left: 28px;
 width: 112px;
 height: 20px;
-/* UI Properties */
-
-
-
 color: #FFFFFF;
 text-transform: uppercase;
 opacity: 1;
