--- a/src/Css/landing.css
+++ b/src/Css/landing.css
@@ -1,3 +1,7 @@
+.landing {
+  width: 100%;
+  height: 100vh;
+}
 .landingBox {
     position: relative;
     top: 0px;
@@ -25,7 +29,7 @@
   .landingtext {
     position: absolute;
     top: 285px;
-  left: 32%;
+  left: 33%;
   
   height: 76px;
   /* UI Properties */
@@ -39,7 +43,7 @@
   }
   .landingBtn {
     position: absolute;
-    top: 510px;
+    top: 70%;
 left: 42%;
 width: 388px;
 height: 98px;
@@ -56,12 +60,17 @@ font-size: 50px;
   
 
   @media only screen and (max-width: 600px) {
+    .landing {
+      background-color: #000000;
+      height: 900px;
+      width: 100%;
+    }
     .landingBox {
-      position: relative;
+      position: absolute;
       top: 0px;
       left: 0px;
       width: 100%;
-      height: 100vh;
+      height: 667px;
       /* UI Properties */
       background: var(--unnamed-color-000000) 0% 0% no-repeat padding-box;
       background: #000000 0% 0% no-repeat padding-box;
@@ -69,123 +78,36 @@ font-size: 50px;
     }
     .groupIMG{
       position: absolute;
-    
-    left: 43%;
-    
-    /* UI Properties */
-  
-    opacity: 1;
-    /* UI Properties */
-    
+    left: 40%;
     opacity: 1;
     }
     .landingtext {
       position: absolute;
-      top: 285px;
+      top: 40%;
     left: 10%;
     
     height: 76px;
     /* UI Properties */
    
-    font-size: 30px;
+    font-size: 20px;
     
     opacity: 1;
     }
     .landingBtn {
       position: absolute;
-      top: 510px;
+      top: 80%;
   left: 15%;
-  width: 388px;
+  width: 70%;
   height: 98px;
   /* UI Properties */
   background: var(--unnamed-color-5efc8d) 0% 0% no-repeat padding-box;
   background: #5EFC8D 0% 0% no-repeat padding-box;
   border-radius: 4px;
   opacity: 1;
-  font-size: 50px;
+  font-size: 30px;
     }
   }
 
 
   
-  @media only screen and (max-width: 1200px) {
-    .landingBox {
-      position: relative;
-      top: 0px;
-      left: 0px;
-      width: 100%;
-      height: 100vh;
-      /* UI Properties */
-      background: var(--unnamed-color-000000) 0% 0% no-repeat padding-box;
-      background: #000000 0% 0% no-repeat padding-box;
-      opacity: 1;
-    }
-    .groupIMG{
-      position: absolute;
-    
-    left: 45%;
-    
-    /* UI Properties */
-  
-    opacity: 1;
-    /* UI Properties */
-    
-    opacity: 1;
-    }
-    .landingtext {
-      position: absolute;
-      top: 285px;
-    left: 15%;
-    font-size: 45px;
-    
-    }
-    .landingBtn {
-      position: absolute;
-      top: 510px;
-  left: 30%;
-  width: 388px;
-  height: 98px;
-  
-    }
-  }
-
-  @media only screen and (max-width: 1800px) {
-    .landingBox {
-      position: relative;
-      top: 0px;
-      left: 0px;
-      width: 100%;
-      height: 100vh;
-      /* UI Properties */
-      background: var(--unnamed-color-000000) 0% 0% no-repeat padding-box;
-      background: #000000 0% 0% no-repeat padding-box;
-      opacity: 1;
-    }
-    .groupIMG{
-      position: absolute;
-    
-    left: 46%;
-    
-    /* UI Properties */
-  
-    opacity: 1;
-    /* UI Properties */
-    
-    opacity: 1;
-    }
-    .landingtext {
-      position: absolute;
-      top: 285px;
-    left: 25%;
-    font-size: 45px;
-    
-    }
-    .landingBtn {
-      position: absolute;
-      top: 510px;
-  left: 35%;
-  width: 388px;
-  height: 98px;
-  
-    }
-  }
+ 
